--- a/poa-front-end/src/app/shared/datePicker/my-datepicker.html
+++ b/poa-front-end/src/app/shared/datePicker/my-datepicker.html
@@ -1,10 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+<ngb-datepicker #dp [(ngModel)]="model" (dateSelect)="emitDateChanged($event)"></ngb-datepicker>
