--- a/poa-front-end/src/app/shared/datePicker/my-datepicker.html
+++ b/poa-front-end/src/app/shared/datePicker/my-datepicker.html
@@ -1,1 +1,1 @@
-<ngb-datepicker #dp [(ngModel)]="model" (dateSelect)="emitDateChanged($event)"></ngb-datepicker>
+<ngb-datepicker #dp (dateSelect)="emitDateChanged($event)" [(ngModel)]="model"></ngb-datepicker>
