--- a/poa-front-end/src/app/employee/list-employee/list-employee.component.html
+++ b/poa-front-end/src/app/employee/list-employee/list-employee.component.html
@@ -1,1 +1,3 @@
-<p>list-employee works!</p>
+<br /><br /><br /><br /><br /><br /><br />
+<h1 class="display-4">Liste Employés</h1>
+<my-table [data]="employees"></my-table>
