--- a/poa-front-end/src/app/organization/list-organization/list-organization.component.html
+++ b/poa-front-end/src/app/organization/list-organization/list-organization.component.html
@@ -1,1 +1,3 @@
-<p>list-organization works!</p>
+<br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+<h1 class="display-4">Liste Organisations</h1>
+<my-table [data]="organizations"></my-table>
