--- a/poa-front-end/src/app/shared/dropdown/dropdown.html
+++ b/poa-front-end/src/app/shared/dropdown/dropdown.html
@@ -1,11 +1,12 @@
 <div class="row">
   <div class="col">
-    <div ngbDropdown class="d-inline-block">
-      <button type="button" class="btn btn-outline-light" id="dropdownBasic1" ngbDropdownToggle>
+    <div class="d-inline-block" ngbDropdown>
+      <button class="btn btn-outline-light" id="dropdownBasic1" ngbDropdownToggle type="button">
         {{name}}
       </button>
-      <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
-        <button ngbDropdownItem (click)="emitClickedEvent($event, name)" *ngFor="let name of buttonNames; let i = index">
+      <div aria-labelledby="dropdownBasic1" ngbDropdownMenu>
+        <button (click)="emitClickedEvent($event, name)" *ngFor="let name of buttonNames; let i = index"
+                ngbDropdownItem>
           {{name}}
         </button>
       </div>
