[Angular] added Contribution info modal, small changes on date picker

--- a/poa-front-end/src/app/shared/datePicker/my-datepicker.html
+++ b/poa-front-end/src/app/shared/datePicker/my-datepicker.html
@@ -1,1 +1,13 @@
-<ngb-datepicker #dp (dateSelect)="emitDateChanged($event)" [(ngModel)]="model"></ngb-datepicker>
+<div class="input-group">
+  <input
+    [id]="id"
+    class="form-control"
+    placeholder="yyyy-mm-dd"
+    name="dp"
+    ngbDatepicker
+    #dp="ngbDatepicker"
+    (dateSelect)="emitDateChanged($event)"
+    [(ngModel)]="model"
+  />
+  <button class="btn btn-outline-secondary bi bi-calendar3" (click)="dp.toggle()" type="button"></button>
+</div>
