--- a/poa-front-end/src/app/component/contribution/contribution.component.html
+++ b/poa-front-end/src/app/component/contribution/contribution.component.html
@@ -1,1 +1,2 @@
-<p>contribution works!</p>
+<h1 class="display-4">Infos cotisations</h1>
+<my-table (contributionClicked)="openModal($event)" [data]="organizations"></my-table>
