--- a/poa-front-end/src/app/component/contribution/contribution.component.html
+++ b/poa-front-end/src/app/component/contribution/contribution.component.html
@@ -1,2 +1,5 @@
 <h1 class="display-4">Infos cotisations</h1>
+<div *ngIf="organizations === undefined" class="d-flex justify-content-center">
+  <div class="spinner-grow" role="status"></div>
+</div>
 <my-table (contributionClicked)="openModal($event)" [data]="organizations"></my-table>
