--- a/poa-front-end/src/app/component/employee/list-employee/list-employee.component.html
+++ b/poa-front-end/src/app/component/employee/list-employee/list-employee.component.html
@@ -1,2 +1,5 @@
 <h1 class="display-4">Liste Employés</h1>
+<div *ngIf="employees === undefined" class="d-flex justify-content-center">
+  <div class="spinner-grow" role="status"></div>
+</div>
 <my-table [data]="employees"></my-table>
