[Angular] Added contribution + misc features

--- a/poa-front-end/src/app/component/accountancy/accountancy.component.html
+++ b/poa-front-end/src/app/component/accountancy/accountancy.component.html
@@ -1,1 +1,12 @@
-<p>accountancy works!</p>
+<h1 class="display-4">Compatabilité</h1>
+<div class="d-flex justify-content-between">
+  <div>
+    <h6>Paiement cotisation</h6>
+    <my-modal></my-modal>
+  </div>
+
+  <div>
+    <h6>Rélevé de compte</h6>
+    <my-table [data]="accountancies"></my-table>
+  </div>
+</div>
